[package]
name = "data-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
clap = { version = "3.2.22", features = [ "derive" ] }
polars = { version = "0.24", features = ["lazy", "csv-file", "strings", "temporal", "polars-time", "dtype-datetime", "timezones", "cum_agg"]}
